Comments out swagger